--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,9 @@
-/* html,
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
 }
 
 a {
@@ -13,4 +13,4 @@ a {
 
 * {
   box-sizing: border-box;
-} */
+}
