--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Ubuntu:wght@300&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
-
 }
 
 a {
